--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,5 @@
   "autoload": {
     "psr-4": { "lyhiving\\mCaptcha\\": "src/" }
   },
-  "minimum-stability": "0.1.0"
+  "minimum-stability": "dev"
 }
